# exdir.rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.org
src/: lib.rs
